# xmlexplorer.github.io

./: .gitignore  TODO.md  ad-frame.html  app.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: bench.yml  native-release.yml
bench/: Cargo.toml  README.md
bench/browser/: index.html
bench/src/: main.rs
native/: Cargo.toml  tauri.conf.json
native/capabilities/: default.json
native/fixtures/: catalog-invalid.xml  catalog-with-schema.xml  catalog.xml  catalog.xsd  namespaced.xml
native/icons/: icon.icns
native/local-spike/: index.html
native/src/: document.rs  format.rs  integration_tests.rs  lib.rs  main.rs  spike.rs  tree.rs  validate.rs  xpath.rs
resources/: XmlExplorer.Setup.msi
src/: App.tsx  AppContent.tsx  main.tsx
src/__tests__/: path.test.ts  tauri.test.ts  treeData.test.ts  xmlLabelTokens.test.ts
src/components/: AdBar.tsx  DropOverlay.tsx  HelpPanel.tsx  LanguageDropdown.tsx  ThemeSelect.tsx  XPathPanel.tsx  XmlTree.css  XmlTree.tsx
src/hooks/: useFileDrop.ts
src/i18n/: en.json  es.json  pt-BR.json  ru.json  zh-CN.json
src/lib/: paintFrame.ts  path.ts  tauri.ts  treeData.ts  xmlLabelTokens.ts
